<resources>
    <string name="app_name">ECommerceApp</string>
    <string name="connecting">Connecting..</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_want_to_exit_the_application">Do you want to exit the application ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="rupee">\u20B9</string>
    <string name="no_data_available">No data available</string>
    <string name="sort_by">Sort By</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="rs">\u20B9 %s</string>
    <string name="qty">QTY : %s</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="e_commerce_app">E-Commerce App</string>
    <string name="my_offers">My Offers</string>
    <string name="account">Account</string>
    <string name="my_orders">My Orders</string>
    <string name="logout">Logout</string>
</resources>
