<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ripple="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">


    <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:singleLine="false"
            android:text="@string/do_you_want_to_exit_the_application"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:textSize="@dimen/txt_size_15"
            ripple:layout_constraintEnd_toEndOf="parent"
            ripple:layout_constraintStart_toStartOf="parent"
            ripple:layout_constraintTop_toTopOf="parent"/>


    <TextView
            android:id="@+id/confirm"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rectangle_shape_green"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_size_15"
            ripple:layout_constraintBottom_toBottomOf="parent"
            ripple:layout_constraintEnd_toStartOf="@+id/cancel"
            ripple:layout_constraintHorizontal_bias="0.5"
            ripple:layout_constraintStart_toStartOf="parent"
            ripple:layout_constraintTop_toBottomOf="@+id/message" android:layout_marginLeft="8dp"/>

    <TextView
            android:id="@+id/cancel"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rectangle_shape_green"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_size_15"
            ripple:layout_constraintBottom_toBottomOf="parent"
            ripple:layout_constraintEnd_toEndOf="parent"
            ripple:layout_constraintHorizontal_bias="0.5"
            ripple:layout_constraintStart_toEndOf="@+id/confirm"
            ripple:layout_constraintTop_toBottomOf="@+id/message"/>


</androidx.constraintlayout.widget.ConstraintLayout>

