<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>


    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.productlist.ProductsActivity">

        <TextView
                android:id="@+id/tv_sort_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/sort_by"
                android:paddingVertical="@dimen/size_10"
                android:paddingHorizontal="@dimen/size_5"
                tools:text="Sort By"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:textSize="@dimen/txt_size_16"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>
        <View
                android:id="@+id/view_vertical_divider_1"
                android:layout_width="1dp"
                app:layout_constraintTop_toTopOf="@+id/tv_sort_by"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sort_by"
                app:layout_constraintLeft_toRightOf="@+id/tv_sort_by"
                android:layout_marginStart="@dimen/size_2"
                android:layout_marginEnd="@dimen/size_2"
                android:layout_marginVertical="@dimen/size_5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintRight_toLeftOf="@+id/tv_sort_by_a"
                android:layout_height="0dp"
                android:layout_marginRight="@dimen/size_2"
                android:background="@color/gray1"
                android:layout_marginLeft="@dimen/size_2"/>

        <TextView
                android:id="@+id/tv_sort_by_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/tv_sort_by"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sort_by"
                android:text="@string/a"
                android:padding="@dimen/size_5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintRight_toLeftOf="@+id/img_sort_1"
                tools:text="A"
                android:textSize="@dimen/txt_size_16"
                app:layout_constraintLeft_toRightOf="@+id/view_vertical_divider_1"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

        <View
                android:id="@+id/view_sort_by_a"
                android:layout_width="0dp"
                app:layout_constraintTop_toTopOf="@+id/tv_sort_by_a"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sort_by_a"
                app:layout_constraintStart_toEndOf="@id/view_vertical_divider_1"
                app:layout_constraintEnd_toStartOf="@id/view_vertical_divider_2"
                android:layout_height="0dp"/>

        <ImageView
                android:id="@+id/img_sort_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/tv_sort_by"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sort_by"
                app:layout_constraintLeft_toRightOf="@+id/tv_sort_by_a"
                app:layout_constraintRight_toLeftOf="@+id/view_vertical_divider_2"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:src="@drawable/ic_import_export_black_24dp"/>


        <View
                android:id="@+id/view_vertical_divider_2"
                android:layout_width="1dp"
                app:layout_constraintTop_toTopOf="@+id/tv_sort_by"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sort_by"
                app:layout_constraintLeft_toRightOf="@+id/img_sort_1"
                android:layout_marginStart="@dimen/size_2"
                android:layout_marginVertical="@dimen/size_5"
                android:layout_marginEnd="@dimen/size_2"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintRight_toLeftOf="@+id/tv_sort_by_b"
                android:layout_height="0dp"
                android:layout_marginRight="@dimen/size_2"
                android:background="@color/gray1"
                android:layout_marginLeft="@dimen/size_2"/>

        <TextView
                android:id="@+id/tv_sort_by_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/tv_sort_by"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sort_by"
                android:text="@string/b"
                android:padding="@dimen/size_5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintRight_toLeftOf="@+id/img_sort_2"
                tools:text="B"
                android:textSize="@dimen/txt_size_16"
                app:layout_constraintLeft_toRightOf="@+id/view_vertical_divider_2"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

        <ImageView
                android:id="@+id/img_sort_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/tv_sort_by"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sort_by"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintRight_toLeftOf="@+id/view_vertical_divider_3"
                app:layout_constraintLeft_toRightOf="@+id/tv_sort_by_b"
                android:src="@drawable/ic_import_export_black_24dp"/>

        <View
                android:id="@+id/view_sort_by_b"
                android:layout_width="0dp"
                app:layout_constraintTop_toTopOf="@+id/tv_sort_by_a"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sort_by_a"
                app:layout_constraintStart_toEndOf="@id/view_vertical_divider_2"
                app:layout_constraintEnd_toStartOf="@id/view_vertical_divider_3"
                android:layout_height="0dp"/>


        <View
                android:id="@+id/view_vertical_divider_3"
                android:layout_width="1dp"
                app:layout_constraintTop_toTopOf="@+id/tv_sort_by"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sort_by"
                app:layout_constraintLeft_toRightOf="@+id/img_sort_2"
                android:layout_marginStart="@dimen/size_2"
                android:layout_marginEnd="@dimen/size_2"
                android:layout_marginVertical="@dimen/size_5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintRight_toLeftOf="@+id/tv_sort_by_c"
                android:layout_height="0dp"
                android:layout_marginRight="@dimen/size_2"
                android:background="@color/gray1"
                android:layout_marginLeft="@dimen/size_2"/>
        <TextView
                android:id="@+id/tv_sort_by_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/tv_sort_by"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sort_by"
                app:layout_constraintRight_toLeftOf="@+id/img_sort_3"
                android:text="@string/c"
                android:padding="@dimen/size_5"
                app:layout_constraintHorizontal_chainStyle="spread"
                tools:text="C"
                android:textSize="@dimen/txt_size_16"
                app:layout_constraintLeft_toRightOf="@+id/view_vertical_divider_3"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

        <ImageView
                android:id="@+id/img_sort_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/tv_sort_by"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sort_by"
                app:layout_constraintLeft_toRightOf="@+id/tv_sort_by_c"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:src="@drawable/ic_import_export_black_24dp"/>

        <View
                android:id="@+id/view_sort_by_c"
                android:layout_width="0dp"
                app:layout_constraintTop_toTopOf="@+id/tv_sort_by_a"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sort_by_a"
                app:layout_constraintStart_toEndOf="@id/view_vertical_divider_3"
                app:layout_constraintEnd_toEndOf="@id/img_sort_3"
                android:layout_height="0dp"/>


        <View
                android:id="@+id/view_horizontal_line_1"
                android:layout_width="0dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_sort_by"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_products"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/view_horizontal_line_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        <TextView
                android:id="@+id/tv_no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/size_5"
                tools:text="No data available."
                android:textSize="@dimen/txt_size_16"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/no_data_available"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/gray1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
